----------
v6.0.1-git
----------

[mms] Fix displaying column headers in dynamic mailbox view when accessing a
      POP3 server.
[mms] Fix display of innocent button in dynamic mailbox view (Bug #11604).
[mms] Fix displaying move to spam mailbox option in the preferences (Bug
      #11603).
[mms] Fixes to PGP Private key generation (Bug #11597).
[mms] Don't block remote message styling if sender is in whitelist.
[mms] Fix spellcheck display in dynamic view if HTML composition mode is the
      default (Bug #11592).


------
v6.0.0
------

[mms] Fix regression in adding an attachment in minimal view.


---------
v6.0.0RC2
---------

[jan] Update Polish translation (Krzysztof Kozera <krzysztof113@o2.pl>).
[jan] Update Dutch translation (Arjen de Korte <arjen+horde@de-korte.org>).
[mms] Fix regression causing large amounts of whitespace padding to be added to
      compose text in basic view.
[mms] Fix regression in sending messages in basic/minimal mode if no attachment
      is added (Bug #11582).
[jan] Fix key navigation in message view of basic mode.


---------
v6.0.0RC1
---------

[mms] Attach as many files as possible instead of aborting on first failed
      attachment add.
[mms] Fix determining first/last unseen message in a mailbox (use message date
      instead of arrival date).
[jan] Don't show application menus in iTip MIME viewer popups.
[mms] Hide subfolder creation option in dynamic view if IMAP server indicates
      that child mailboxes cannot be created.
[mms] Correctly send deleted flag information to browser cache when using
      dynamic/smartmobile view (Bug #11362).
[mms] Auto-update folders list in smartmobile view if special mailbox is
      auto-created (Request #11482).
[mms] Load folders list on-demand in smartmobile view.
[mms] Fix thread view when mailbox is not thread sorted (Bug #11320).
[mms] Display message range when dragging slider on dynamic mailbox page.


-----------
v6.0.0beta4
-----------
