@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Optimize permission checking when creating a mailbox if no limit exists for a user.
 * [mms] Fix displaying column headers in dynamic mailbox view when accessing a POP3 server.
 * [mms] Fix display of innocent button in dynamic mailbox view (Bug #11604).
 * [mms] Fix displaying move to spam mailbox option in the preferences (Bug #11603).
@@ -2814,6 +2815,7 @@
    <date>2012-10-30</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Optimize permission checking when creating a mailbox if no limit exists for a user.
 * [mms] Fix displaying column headers in dynamic mailbox view when accessing a POP3 server.
 * [mms] Fix display of innocent button in dynamic mailbox view (Bug #11604).
 * [mms] Fix displaying move to spam mailbox option in the preferences (Bug #11603).
